Fix spurious syntax error in multidim. indexed array assignments
Example reproducers:
  $ my_array=((somevalue) (select)) && typeset -p my_array
  -ksh: syntax error: `select' unexpected
  $ my_array=((somevalue) select) && typeset -p my_array
  -ksh: syntax error: `select' unexpected

Analysis: The problem is in the assign() function in parse.c. From
the second value element on, reserved words/keywords are wrongly
recognised when assign() is called recursively to parse
multidimensional array assignments, because the lexer flag
'noreserv' is reset to zero in the course of the assign() call.

src/cmd/ksh93/sh/parse.c: assign():
- After recursively calling assign() to deal with nested
  parentheses, set noreserv to back to 1 to re-disable the
  recognition of reserved words by the lexer.

Thanks to @TristanJamesBall for the report.
Resolves: https://github.com/ksh93/ksh/issues/790

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,14 @@ This documents significant changes in the dev branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2024-10-23:
+
+- Fixed a bug in multidimensional indexed array assignments where unquoted
+  values that corresponded to reserved words (such as 'if' or 'select')
+  incorrectly caused a syntax error. For example,
+    my_array=((somevalue) select) && typeset -p my_array
+  now works as expected. This bug was introduced in ksh 93r+ 2006-06-30.
+
 2024-08-28:
 
 - Fixed a crash that occurred for an arithmetic 'for' that has two instead of
